# simpleblockchain

./: .gitignore  Cargo.toml  LICENSE-MIT  Layered Architecture  README.md  Untitled Diagram.drawio  aura.toml  build.sh  cli_config.toml  client_log.yml  config.toml  console.yml  log.yml  poa.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: tech_debt.md
.github/workflows/: build.yml  codecov.yml  rust.yml
examples/: README.md
misc/: BlockchainTxnFlowDiagram.drawio  SimpleblockchainArchitecture.drawio
src/client/: Cargo.toml
src/client/src/: cli_config.rs  client.rs  lib.rs  main.rs
src/consensus/: Cargo.toml
src/consensus/aura/: Cargo.toml  README.md
src/consensus/aura/src/: aura_interface.rs  aura_message_sender.rs  aura_messages.rs  config.rs  lib.rs
src/consensus/poa/: Cargo.toml
src/consensus/poa/src/: consensus_interface.rs  consensus_message_sender.rs  lib.rs  poa_config.rs  poa_interface.rs  poa_message_sender.rs  poa_messages.rs
src/consensus/src/: blockchain.rs  consensus_config.rs  consensus_interface.rs  consensus_messages.rs  lib.rs
src/controllers/: Cargo.toml
src/controllers/src/: client_controller.rs  lib.rs  tests.rs
src/db/: Cargo.toml
src/db/src/: database.rs  db_layer.rs  lib.rs
src/db_service/: Cargo.toml
src/db_service/dbtest/rocksdb/: 000013.sst  000014.sst  000015.sst  IDENTITY  LOG  LOG.old.1579153037714524  LOG.old.1579153073929008  MANIFEST-000018  OPTIONS-000021
src/db_service/src/: db_fork_ref.rs  db_layer.rs  db_snapshot_ref.rs  db_validation_ref.rs  lib.rs  schema_operations.rs  tests.rs
src/generic_traits/: Cargo.toml
src/generic_traits/src/: lib.rs  traits.rs
src/message_handler/: Cargo.toml
src/message_handler/src/: lib.rs  message_sender.rs  message_traits.rs  messages.rs  node_messages.rs  tests.rs
src/node/: Cargo.toml
src/node/src/: block.rs  lib.rs  main.rs  nodemsgprocessor.rs  test_application_1.rs  transaction.rs  transaction_old.rs
src/node/src/block/: transaction.rs
src/p2plib/: Cargo.toml
src/p2plib/src/: constants.rs  lib.rs  message_sender.rs  messages.rs  p2pbehaviour.rs  simpleswarm.rs  txn_pool_p2p.rs
src/schema/: Cargo.toml  build.rs
src/schema/src/: appdata.rs  block.rs  lib.rs  signed_transaction.rs  state.rs  transaction.rs  transaction_pool.rs  types.rs  user_messages.rs  wallet.rs
src/schema/src/proto/: user_transactions.proto
src/sdk/: Cargo.toml  README.md
src/sdk/src/: constants.rs  lib.rs  signed_transaction.rs  state.rs  traits.rs
src/services/: Cargo.toml
src/services/src/: client_services.rs  lib.rs  tests.rs  transaction_service.rs
src/user/app_1/: Cargo.toml  build.rs
src/user/app_1/src/: lib.rs  state.rs  transaction.rs  user_messages.rs
src/user/app_2/: Cargo.toml
src/user/app_2/src/: lib.rs  state.rs  transaction.rs  user_messages.rs
src/user/app_2/src/proto/: user_transactions.proto
src/user/doc_app/: Cargo.toml
src/user/doc_app/src/: lib.rs  state.rs  transaction.rs  user_messages.rs  user_messages1.rs
src/user/doc_app/src/proto/: user_transactions.proto
src/user/doc_app_client/: Cargo.toml
src/user/doc_app_client/src/: build_transaction.rs  client.rs  doc_app_types.rs  main.rs
src/user/wallet_app/: Cargo.toml
src/user/wallet_app/src/: lib.rs  state.rs  transaction.rs  user_messages.rs
src/user/wallet_app/src/proto/: user_transactions.proto
src/user/wallet_app_client/: Cargo.toml
src/user/wallet_app_client/src/: cli_config.rs  client.rs  main.rs  transaction_test_cases.rs  wallet_app_types.rs
src/utils/: Cargo.toml  config.toml  log.yml
src/utils/src/: configreader.rs  global_peer_data.rs  globaldata.rs  lib.rs  logger.rs  serializer.rs  serialzer.rs
src/utils/src/crypto/: keypair.rs
tests/: README.md  test_application_1.rs
tests/docker/: docker-compose.yaml
tests/docker/config1/: config.toml
tests/docker/config2/: aura.toml  config.toml  poa.toml
tests/docker/config3/: aura.toml  config.toml
