[workspace]
members = [
    "src/node",
    "src/db_service",
    "src/schema",
    "src/client",
    "src/user/doc_app",
    "src/user/wallet_app",
    "src/user/wallet_app_client",
    "src/user/doc_app_client",
]

[package]
name = "simpleblockchain"
version = "0.0.1"
license = "MIT OR Apache-2.0"
