[package]
name = "client"
version = "0.1.0"
authors = ["gaurav agarwal <gaurav.agarwal@talentica.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
schema = { path = "../schema" }
utils = { path = "../utils" }
exonum-crypto = "1.0.0-rc.3"
reqwest = "0.9.14"
hex = "0.4.2"
toml = "0.5.5"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "^0.11"
lazy_static = "1.4.0"
log = "0.4.8"
libp2p = "^0.15"
