[package]
name = "consensus"
version = "0.1.0"
authors = ["gaurava"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils" }
db = { path = "../db" }
schema = { path = "../schema" }
db_service = { path = "../db_service" }
hex = "^0.4"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "^0.10"
chrono = { version = "0.4", features = ["serde"] }
exonum-merkledb = "0.12.0"
exonum-crypto = "0.12.0"
failure = "0.1"
bincode = "1.0"