[package]
name = "consensus"
version = "0.1.0"
authors = ["gaurava"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
exonum-build = "^1.0.0-rc.3"

[dependencies]
db_service = { path = "../db_service" }
p2plib = {path = "../p2plib"}
schema = { path = "../schema" }
utils = { path = "../utils" }

exonum-merkledb = "^1.0.0-rc.3"
exonum-crypto = "^1.0.0-rc.3"
exonum-derive = "^1.0.0-rc.3"

hex = "^0.4"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "^0.10"
failure = "0.1"
bincode = "1.0"
futures = "^0.3"
toml = "0.5.5"
lazy_static = "1.4.0"
protobuf = "2.8.0"
log = "0.4.8"