[package]
name = "consensus"
version = "0.1.0"
authors = ["gaurav agarwal <gaurav.agarwal@talentica.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "SimpleBlockchain consensus interface to access different consensus."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aura = { path = "./aura" }
# gosig = { path = "./gosig" }
poa = { path = "./poa" }
utils = { path = "../utils" }
sdk = { path = "../sdk"}
message_handler = { path = "../message_handler" }

exonum-merkledb = "^1.0.0-rc.3"
exonum-crypto = "^1.0.0-rc.3"
exonum-derive = "^1.0.0-rc.3"

hex = "^0.4"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "^0.10"
failure = "0.1"
bincode = "1.0"
futures = "^0.3"
toml = "0.5.5"
lazy_static = "1.4.0"
protobuf = "2.8.0"
log = "0.4.8"
libp2p = "0.22.0"
