[package]
name = "db"
version = "0.1.0"
authors = ["utkarshkvs1 <utkarsh.kvs1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocksdb = "0.13.0"
bincode = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.10"
libp2p = "0.13.1"



