[package]
name = "db_service"
version = "0.1.0"
authors = ["gaurava"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils" }
generic_traits = { path = "../generic_traits" }
app_1 = { path = "../user/app_1" }
app_2 = { path = "../user/app_2" }
schema = { path = "../schema" }
hex = "^0.4"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "^0.10"
chrono = { version = "0.4", features = ["serde"] }
exonum-merkledb = "0.12.0"
exonum-crypto = "0.12.0"
failure = "0.1"
bincode = "1.0"

rocksdb = "0.13.0"
# libp2p = "^0.15"
lazy_static = "1.4.0"