[package]
name = "db_service"
version = "0.1.0"
authors = ["gaurava"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
exonum-build = "1.0.0-rc.1"

[dependencies]
client = { path = "../client" }
generic_traits = { path = "../generic_traits" }
schema = { path = "../schema" }
utils = { path = "../utils" }

exonum-merkledb = "1.0.0-rc.1"
exonum-crypto = "1.0.0-rc.1"
exonum-derive = "1.0.0-rc.1"
exonum-proto = "1.0.0-rc.1"

hex = "^0.4"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "^0.10"
chrono = { version = "0.4", features = ["serde"] }
failure = "0.1"
futures = "0.3.1"
bincode = "1.0"
rocksdb = "0.13.0"
lazy_static = "1.4.0"
protobuf = "2.8.0"
log = "0.4.8"