[package]
name = "db_service"
version = "0.1.0"
authors = ["gaurava"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
exonum-build = "^1.0.0-rc.3"

[dependencies]
client = { path = "../client" }
sdk = { path = "../sdk" }
schema = { path = "../schema" }
utils = { path = "../utils" }

exonum-merkledb = "^1.0.0-rc.3"
exonum-crypto = "^1.0.0-rc.3"
exonum-derive = "^1.0.0-rc.3"
exonum-proto = "^1.0.0-rc.3"

hex = "^0.4"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "^0.11"
chrono = { version = "0.4", features = ["serde"] }
failure = "0.1"
futures = "0.3.5"
bincode = "1.0"
rocksdb = "0.14.0"
lazy_static = "1.4.0"
protobuf = "2.8.0"
log = "0.4.8"
anyhow = "^1.0.28"
