[package]
name = "generic_traits"
version = "0.1.0"
authors = ["GauravA"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
exonum-build = "^1.0.0-rc.3"

[dependencies]
anyhow = "^1.0.26"
hex = "^0.4"
utils = { path = "../utils" }
exonum-merkledb = "^1.0.0-rc.3"
exonum-crypto = "^1.0.0-rc.3"
exonum-derive = "^1.0.0-rc.3"
exonum-proto = "^1.0.0-rc.3"
protobuf = "2.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "^0.10"
failure = "0.1"
bincode = "1.0"
