[package]
name = "message_handler"
version = "0.1.0"
authors = ["gaurav agarwal <gaurav.agarwal@talentica.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils" }
sdk = { path = "../sdk" }
schema = { path = "../schema" }

futures = "^0.3"
libp2p = "0.22.0"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "^1.4"
log = "0.4.8"