[package]
name = "node"
version = "0.1.0"
authors = ["Pankajm"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
doc_app = { path = "../user/doc_app" }
wallet_app = { path = "../user/wallet_app" }
consensus = { path = "../consensus" }
controllers = { path = "../controllers" }
db_service = { path = "../db_service"}
p2plib = { path = "../p2plib" }
schema = { path = "../schema" }
utils = { path = "../utils" }

exonum-merkledb = "1.0.0-rc.3"
exonum-crypto = "1.0.0-rc.3"
exonum-derive = "1.0.0-rc.3"

actix-rt = "1.0.0"
hex = "^0.4"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "^0.10"
libp2p = "^0.15"
futures = "0.3.1"
async-std = "^1.4"
env_logger = "0.7.1"
lazy_static = "^1.4"
ctrlc = "3.1.4"
log = "0.4.8"

[profile.release]
panic = 'abort'

[[example]]
name = "test_application_document_transfer"
path = "src/test_application_1.rs"
