[package]
name = "node"
version = "0.1.0"
authors = ["Pankajm"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
consensus = { path = "../consensus" }
controllers = { path = "../controllers" }
db_service = { path = "../db_service"}
p2plib = { path = "../p2plib" }
schema = { path = "../schema" }
utils = { path = "../utils" }
sdk = { path = "../sdk"}
message_handler = { path = "../message_handler" }

exonum-merkledb = "^1.0.0-rc.3"
exonum-crypto = "^1.0.0-rc.3"
exonum-derive = "^1.0.0-rc.3"

clap = "2.33.2"
actix-rt = "1.1.1"
hex = "^0.4"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "^0.11"
libp2p = "^0.15"
futures = "0.3.5"
async-std = "^1.6"
env_logger = "0.7.1"
lazy_static = "^1.4"
ctrlc = "3.1.5"
log = "0.4.11"
libloading = "^0.6"

[profile.release]
panic = 'abort'
