[package]
name = "p2plib"
version = "0.1.0"
authors = ["Pankajm"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
consensus = { path = "../consensus" }
utils = { path = "../utils" }
schema = { path = "../schema" }
chrono = { version = "0.4", features = ["serde"] }