[package]
name = "p2plib"
version = "0.1.0"
authors = ["Pankajm"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils" }
generic_traits = { path = "../generic_traits" }
schema = { path = "../schema" }

futures = "^0.3"
libp2p = "^0.15"
env_logger = "0.7.1"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "^0.11"
lazy_static = "^1.4"