[package]
name = "p2plib"
version = "0.1.0"
authors = ["Pankajm"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { path = "../utils" }
sdk = { path = "../sdk" }
message_handler = { path = "../message_handler" }

futures = "^0.3"
libp2p = "0.22.0"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "^0.11"
log = "0.4.8"
