[package]
name = "schema"
version = "0.1.0"
authors = ["gaurava"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
exonum-build = "1.0.0-rc.1"
prost-build = { version = "0.6.1" }

[dependencies]
app_1 = { path = "../user/app_1" }
app_2 = { path = "../user/app_2" }
generic_traits = { path = "../generic_traits" }
utils = { path = "../utils" }

exonum-merkledb = "1.0.0-rc.1"
exonum-crypto = "1.0.0-rc.1"
exonum-derive = "1.0.0-rc.1"
exonum-proto = "1.0.0-rc.1"

hex = "^0.4"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "^0.10"
failure = "0.1"
bincode = "1.0"
lazy_static = "1.4.0"
prost = "0.6.1"
protobuf = "2.8.0"