[package]
name = "schema"
version = "0.1.0"
authors = ["gaurava"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
exonum-build = "^1.0.0-rc.3"
prost-build = { version = "0.6.1" }

[dependencies]
# doc_app = { path = "../user/doc_app" }
# wallet_app = { path = "../user/wallet_app" }
sdk = { path = "../sdk" }
utils = { path = "../utils" }

exonum-merkledb = "^1.0.0-rc.3"
exonum-crypto = "^1.0.0-rc.3"
exonum-derive = "^1.0.0-rc.3"
exonum-proto = "^1.0.0-rc.3"

anyhow = "^1.0.26"
hex = "^0.4"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "^0.10"
failure = "0.1"
bincode = "1.0"
lazy_static = "1.4.0"
prost = "0.6.1"
protobuf = "2.8.0"
log = "0.4.8"
libloading = "^0.6"