[package]
name = "services"
version = "0.1.0"
authors = ["gaurav agarwal <gaurav.agarwal@talentica.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
db_service = { path = "../db_service"}
p2plib = { path = "../p2plib" }
schema = { path = "../schema" }
utils = { path = "../utils" }

exonum-merkledb = "1.0.0-rc.1"
exonum-crypto = "1.0.0-rc.1"
exonum-derive = "1.0.0-rc.1"

hex = "^0.4"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "^0.10"
libp2p = "^0.15"
futures = "0.3.1"
async-std = "^1.4"
env_logger = "0.7.1"
lazy_static = "^1.4"
actix-web = "2.0"
actix-rt = "1.0"
