[package]
name = "services"
version = "0.1.0"
authors = ["Prem Baranwal <prem.baranwal@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
db_service = { path = "../db_service"}
message_handler = { path = "../message_handler" }
schema = { path = "../schema" }
utils = { path = "../utils" }
sdk = { path = "../sdk" }

exonum-merkledb = "^1.0.0-rc.3"
exonum-crypto = "^1.0.0-rc.3"
exonum-derive = "^1.0.0-rc.3"

futures = "0.3.1"
actix-web = "2.0"
log = "0.4.8"
