[package]
name = "utils"
version = "0.1.0"
authors = ["Pankajm"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = "^0.13.1"
hex = "^0.4"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "^0.10"
toml = "0.5.5"
lazy_static = "1.4.0"