[package]
name = "doc_app"
version = "0.1.0"
authors = ["GauravA"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
exonum-build = "^1.0.0-rc.3"
prost-build = { version = "0.6.1" }

[dependencies]
generic_traits = { path = "../../generic_traits" }
utils = { path = "../../utils" }

exonum-merkledb = "^1.0.0-rc.3"
exonum-crypto = "^1.0.0-rc.3"
exonum-derive = "^1.0.0-rc.3"
exonum-proto = "^1.0.0-rc.3"

futures = "^0.3"
env_logger = "0.7.1"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "^0.11"
hex = "^0.4"
failure = "0.1"
bincode = "1.0"
prost = "0.6.1"
protobuf = "2.8.0"