[package]
name = "wallet_app_client"
version = "0.1.0"
authors = ["gaurav agarwal <gaurav.agarwal@talentica.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdk = { path = "../../sdk" }
utils = { path = "../../utils" }

exonum-merkledb = "^1.0.0-rc.3"
exonum-crypto = "^1.0.0-rc.3"
exonum-derive = "^1.0.0-rc.3"

clap = "2.33.1"
bytes = "0.5.5"
actix-web = "2.0.0"
actix-rt = "1.1.1"
awc = "1.0.1"
futures = "0.3.5"
hex = "0.4.2"
toml = "0.5.5"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "^0.11"
lazy_static = "1.4.0"
log = "0.4.8"
bincode = "1.3"
